@@ -1,4 +1,4 @@
-<!-- gcryptref-cipher.sgml - libgcrypt reference (ciphers)
+<!-- cipher-ref.sgml - libgcrypt reference (ciphers)
     Copyright (C) 2000 Free Software Foundation, Inc.
 
     This file is part of GnuPG.
