@@ -1,4 +1,4 @@
-<!-- gcryptref-digest.sgml - libgcrypt reference (digests)
+<!-- pubkey-ref.sgml - libgcrypt reference (digests)
     Copyright (C) 2000 Free Software Foundation, Inc.
 
     This file is part of GnuPG.
