@@ -1,3 +1,7 @@
+2000-12-21  Werner Koch  <wk@gnupg.org>
+
+	Renamed the gcryptref(.sgml files and removed the GnuPG stuff.
+
 Tue Oct 26 14:10:21 CEST 1999  Werner Koch  <wk@gnupg.de>
 
 	* Makefile.am (SUBDIRS): Removed gph from this development series
